landing: update assets; add final whatsapp icons; clean old files

--- a/landing/index.html
+++ b/landing/index.html
@@ -575,7 +575,7 @@ p.subtitle {
 
 <div class="header flex">
   <a href="https://www.chessempire.kz/" class="flex">
-    <img class="avatar" src="chess-empire-logo.svg" />
+    <img class="avatar" src="chess-logo.jpg?v=2" />
     <div class="header-text-name">Chess Empire</div>
   </a>
   <div class="socials">
