--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -143,7 +143,7 @@ a {
   flex-shrink: 0;
 }
 .scrolled .header, .header:hover {
-  width:250px;
+  width:255px;
 }
 .avatar {
   width:32px;
@@ -575,12 +575,12 @@ p.subtitle {
 
 <div class="header flex">
   <a href="https://www.chessempire.kz/" class="flex">
-    <img class="avatar" src="chess-empire-logo.svg" />
+    <img class="avatar" src="chess-logo-new.png" />
     <div class="header-text-name">Chess Empire</div>
   </a>
   <div class="socials">
     <a href="https://www.instagram.com/chessempire.kz/" target="_blank"><img src="https://galshir.com/studio-img/i-instagram.png" style="margin-right:2px">5.6k</a>
-    <a href="https://api.whatsapp.com/send/?phone=77077872210&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21%0A%0A%D0%9F%D0%B8%D1%88%D1%83+%D0%B8%D0%B7+%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F+2%D0%93%D0%98%D0%A1.%0A%0A&type=phone_number&app_absent=0" target="_blank"><img src="whatsapp-icon.png" style="margin-right:2px"></a>
+    <a href="https://api.whatsapp.com/send/?phone=77077872210&text=%D0%27%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21%0A%0A%D0%9F%D0%B8%D1%88%D1%83+%D0%B8%D0%B7+%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F+2%D0%93%D0%98%D0%A1.%0A%0A&type=phone_number&app_absent=0" target="_blank" style="padding:0 20px 0 8px"><img src="whatsapp-official.svg" style="margin-right:2px"></a>
   </div>
 </div>
 
@@ -676,10 +676,10 @@ p.subtitle {
 <div class="margin"></div>
 
 <div class="content">
-  <img style="width:120px; height:120px; margin-bottom:24px; border-radius: 100%;" src="galshir-photo.jpg">
-  <p class="subtitle">Gal Shir is a brand design specialist creating logos since 2010</p>
-  <p>Slow-cooked over a year, this book is a culmination of everything I've learned about logo design through my 15-year career. It's a hands-on guide created to help you become a succesfull logo designer and make a living doing a fulfilling and meaningful work.</p>
-  <p>In this book, you'll find step-by-step instructions, clear explanations, and plenty of examples. Whether you're just starting out or looking to sharpen your craft, this book will inspire, motivate, and provide you with everything you need to take your logo design skills to the next level.</p>
+  <img style="width:120px; height:120px; margin-bottom:24px; border-radius: 100%;" src="chess-logo-new.png">
+  <p class="subtitle">Chess Empire - Шахматная школа с 2018 года</p>
+  <p>Более 7 лет опыта в обучении шахматам детей и взрослых. Наш курс создан на основе проверенных методик и практического опыта тысяч учеников. Мы разработали систему, которая помогает новичкам быстро достичь 4 разряда и войти в топ 20% игроков в мире.</p>
+  <p>В этом курсе вы найдете пошаговые инструкции, понятные объяснения и множество практических примеров. Независимо от того, начинаете ли вы с нуля или хотите улучшить свои навыки, этот курс вдохновит, мотивирует и даст вам все необходимое для достижения мастерства в шахматах.</p>
   <img src="heart.png?2" style="width:60px; margin-top:24px" />
 </div>
 
