landing: replace whatsapp icon with outline SVG matching Instagram monochrome; keep CSS override

--- a/swan_landing/index.html
+++ b/swan_landing/index.html
@@ -36,32 +36,34 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <div class="hero-badge">
-                <span class="badge-number">200+</span>
-                <span class="badge-text">GTM teams scaling with intelligence, not headcount</span>
-            </div>
+            <div class="white-panel">
+                <div class="hero-badge">
+                    <span class="badge-number">200+</span>
+                    <span class="badge-text">GTM teams scaling with intelligence, not headcount</span>
+                </div>
 
-            <h1 class="hero-title">GTM at the speed of thought</h1>
+                <h1 class="hero-title">GTM at the speed of thought</h1>
 
-            <p class="hero-subtitle">
-                Turn any GTM idea into an agentic workflow in seconds, from prompt to pipeline.
-                Hire an AI GTM engineer today.
-            </p>
+                <p class="hero-subtitle">
+                    Turn any GTM idea into an agentic workflow in seconds, from prompt to pipeline.
+                    Hire an AI GTM engineer today.
+                </p>
 
-            <div class="hero-cta">
-                <button class="btn-primary btn-large">Watch Demo</button>
-                <button class="btn-secondary btn-large">Request access</button>
-            </div>
+                <div class="hero-cta">
+                    <button class="btn-primary btn-large">Watch Demo</button>
+                    <button class="btn-secondary btn-large">Request access</button>
+                </div>
 
-            <div class="hero-logos">
-                <p class="logos-text">Teams already scaling with intelligence</p>
-                <div class="logos-grid">
-                    <!-- Placeholder for company logos -->
-                    <div class="logo-placeholder">Company 1</div>
-                    <div class="logo-placeholder">Company 2</div>
-                    <div class="logo-placeholder">Company 3</div>
-                    <div class="logo-placeholder">Company 4</div>
-                    <div class="logo-placeholder">Company 5</div>
+                <div class="hero-logos">
+                    <p class="logos-text">Teams already scaling with intelligence</p>
+                    <div class="logos-grid">
+                        <!-- Placeholder for company logos -->
+                        <div class="logo-placeholder">Company 1</div>
+                        <div class="logo-placeholder">Company 2</div>
+                        <div class="logo-placeholder">Company 3</div>
+                        <div class="logo-placeholder">Company 4</div>
+                        <div class="logo-placeholder">Company 5</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -70,21 +72,23 @@
     <!-- Video Section -->
     <section class="video-section">
         <div class="container">
-            <div class="section-header">
-                <p class="section-label">Why Swan?</p>
-                <h1 class="section-title">Swan is Lovable for GTM</h1>
-                <p class="section-description">Turn your GTM ideas into reality in seconds. See Swan in action</p>
-            </div>
+            <div class="white-panel">
+                <div class="section-header">
+                    <p class="section-label">Why Swan?</p>
+                    <h1 class="section-title">Swan is Lovable for GTM</h1>
+                    <p class="section-description">Turn your GTM ideas into reality in seconds. See Swan in action</p>
+                </div>
 
-            <div class="video-placeholder">
-                <div class="video-overlay">
-                    <button class="play-button">
-                        <svg width="64" height="64" viewBox="0 0 64 64" fill="none">
-                            <circle cx="32" cy="32" r="32" fill="#fff" opacity="0.9"/>
-                            <path d="M26 20 L44 32 L26 44 Z" fill="#000"/>
-                        </svg>
-                    </button>
-                    <p>Video Demo Placeholder</p>
+                <div class="video-placeholder">
+                    <div class="video-overlay">
+                        <button class="play-button">
+                            <svg width="64" height="64" viewBox="0 0 64 64" fill="none">
+                                <circle cx="32" cy="32" r="32" fill="#fff" opacity="0.9"/>
+                                <path d="M26 20 L44 32 L26 44 Z" fill="#000"/>
+                            </svg>
+                        </button>
+                        <p>Video Demo Placeholder</p>
+                    </div>
                 </div>
             </div>
         </div>
