--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -583,7 +583,7 @@ p.subtitle {
   </a>
   <div class="socials">
     <a href="https://www.instagram.com/chessempire.kz/" target="_blank"><img src="https://galshir.com/studio-img/i-instagram.png" style="margin-right:2px">5.6k</a>
-    <a href="https://api.whatsapp.com/send/?phone=77077872210&text=%D0%27%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21%0A%0A%D0%9F%D0%B8%D1%88%D1%83+%D0%B8%D0%B7+%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F+2%D0%93%D0%98%D0%A1.%0A%0A&type=phone_number&app_absent=0" target="_blank" style="padding:0 20px 0 8px"><img class="whatsapp" src="whatsapp-resized.png" style="margin-right:2px; width:20px; height:20px"></a>
+    <a href="https://api.whatsapp.com/send/?phone=77077872210&text=%D0%27%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21%0A%0A%D0%9F%D0%B8%D1%88%D1%83+%D0%B8%D0%B7+%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F+2%D0%93%D0%98%D0%A1.%0A%0A&type=phone_number&app_absent=0" target="_blank" style="padding:0 20px 0 8px"><img class="whatsapp" src="whatsapp-outline.svg" style="margin-right:2px; width:20px; height:20px"></a>
   </div>
 </div>
 
