landing: set WhatsApp icon to gray (matches Instagram color) via Simple Icons

--- a/swan_landing/index.html
+++ b/swan_landing/index.html
@@ -56,13 +56,51 @@
 
                 <div class="hero-logos">
                     <p class="logos-text">Teams already scaling with intelligence</p>
-                    <div class="logos-grid">
-                        <!-- Placeholder for company logos -->
-                        <div class="logo-placeholder">Company 1</div>
-                        <div class="logo-placeholder">Company 2</div>
-                        <div class="logo-placeholder">Company 3</div>
-                        <div class="logo-placeholder">Company 4</div>
-                        <div class="logo-placeholder">Company 5</div>
+                    <div class="logos-scroll-container">
+                        <div class="logos-scroll-track">
+                            <!-- First set of logos -->
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 1</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 2</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 3</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 4</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 5</text>
+                            </svg>
+                            <!-- Duplicate set for seamless loop -->
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 1</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 2</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 3</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 4</text>
+                            </svg>
+                            <svg class="company-logo" width="120" height="40" viewBox="0 0 120 40">
+                                <rect width="120" height="40" fill="#e0e0e0" rx="8"/>
+                                <text x="60" y="25" text-anchor="middle" fill="#999" font-size="12" font-family="Arial">Company 5</text>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
