landing: update Russian subtitle copy per request

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -618,48 +618,37 @@ p.subtitle {
 
 <div class="content">
   <h2>Присоединяйся к Шахматной Империи</h2>
-  <p class="subtitle"><b>60 Шагов до 4 разряда</b> это интерактивный онлайн курс в которым вы шаг за шагом пройдете путь от базовых правил, до продвинутых тактический приемов. В конце путешествия вас ждет лайв турнир на 4 разряд, для закрепления знаний на всю оставшуюся жизнь.</p>
+  <p class="subtitle"><b>60 Шагов до 4 разряда</b> это интерактивный онлайн курсб где вы шаг за шагом пройдете путь от базовых правил, до продвинутых тактический приемов.</p>
   <div class="chapters">
     <div class="chapter">
-      <img src="icons/galshir-icon-preparing.svg" />
-      <div class="chapter-title">PREPARING</div>
-      <p class="chapter-content">Understanding the purpose of a logo to set yourself for success</p>
+      <img src="icons/chess-icon-phone.svg" />
+      <div class="chapter-title">УЧИСЬ ВЕЗДЕ</div>
+      <p class="chapter-content">Практикуйтесь во время поездки, обеда, перерыва или в любое время, когда у вас есть телефон</p>
     </div>
     <div class="chapter">
-      <img src="icons/galshir-icon-researching.svg" />
-      <div class="chapter-title">RESEARCHING</div>
-      <p class="chapter-content">Learning the right stuff about the brand to ensure a successful process</p>
+      <img src="icons/chess-icon-timer.svg" />
+      <div class="chapter-title">КОРОТКИЕ УРОКИ</div>
+      <p class="chapter-content">5-15 минутные уроки идеально подходят для мобильных учебных сессий</p>
     </div>
     <div class="chapter">
-      <img src="icons/galshir-icon-sketching.svg" />
-      <div class="chapter-title">SKETCHING</div>
-      <p class="chapter-content">Coming up with ideas and finding relevant concepts and associations</p>
+      <img src="icons/chess-icon-puzzle.svg" />
+      <div class="chapter-title">ИНТЕРАКТИВНЫЕ ЗАДАЧИ</div>
+      <p class="chapter-content">Решайте шахматные задачи прямо на телефоне с сенсорным управлением</p>
     </div>
     <div class="chapter">
-      <img src="icons/galshir-icon-polishing.svg" />
-      <div class="chapter-title">POLISHING</div>
-      <p class="chapter-content">Cleaning, simplifying, and polishing a sketch to a pixel-perfect logo</p>
+      <img src="icons/chess-icon-progress.svg" />
+      <div class="chapter-title">ОТСЛЕЖИВАНИЕ ПРОГРЕССА</div>
+      <p class="chapter-content">Отслеживайте свой прогресс с помощью визуальных полос прогресса и достижений</p>
     </div>
     <div class="chapter">
-      <img src="icons/galshir-icon-characterizing.svg" />
-      <div class="chapter-title">CHARACTERIZING</div>
-      <p class="chapter-content">Matching the right colors, shapes, and weights to add personality to the logo</p>
+      <img src="icons/chess-icon-video.svg" />
+      <div class="chapter-title">ВИДЕО УРОКИ</div>
+      <p class="chapter-content">Высококачественный видеоконтент, оптимизированный для мобильного просмотра</p>
     </div>
     <div class="chapter">
-      <img src="icons/galshir-icon-lettering.svg" />
-      <div class="bonus-badge">BONUS</div>
-      <div class="chapter-title">LETTERING</div>
-      <p class="chapter-content">Choosing and customizing a wordmark that matches the logo and the brand</p>
-    </div>
-    <div class="chapter">
-      <img src="icons/galshir-icon-testing.svg" />
-      <div class="chapter-title">TESTING</div>
-      <p class="chapter-content">Making sure everything looks neat in all contexts and sizes</p>
-    </div>
-    <div class="chapter">
-      <img src="icons/galshir-icon-presenting.svg" />
-      <div class="chapter-title">PRESENTING</div>
-      <p class="chapter-content">Showcasing the logo in all its glory in a way clients can't reject</p>
+      <img src="icons/chess-icon-bell.svg" />
+      <div class="chapter-title">УМНЫЕ НАПОМИНАНИЯ</div>
+      <p class="chapter-content">Получайте уведомления, когда пришло время для ежедневной практики шахмат</p>
     </div>
   </div>
 </div>
@@ -697,7 +686,7 @@ p.subtitle {
       8 days and 12 hours left
     </div>
   </div>
-  <a class="button tracked-button" href="https://galshir.gumroad.com/l/60?wanted=true">DOWNLOAD</a>
+  <a class="button tracked-button" href="https://galshir.gumroad.com/l/60?wanted=true">НАЧАТЬ</a>
 </div>
 
 <script>
