landing: fix copy punctuation for subtitle (comma after курс)

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -618,7 +618,7 @@ p.subtitle {
 
 <div class="content">
   <h2>Присоединяйся к Шахматной Империи</h2>
-  <p class="subtitle"><b>60 Шагов до 4 разряда</b> это интерактивный онлайн курсб где вы шаг за шагом пройдете путь от базовых правил, до продвинутых тактический приемов.</p>
+  <p class="subtitle"><b>60 Шагов до 4 разряда</b> это интерактивный онлайн курс, где вы шаг за шагом пройдете путь от базовых правил, до продвинутых тактический приемов.</p>
   <div class="chapters">
     <div class="chapter">
       <img src="icons/chess-icon-phone.svg" />
